docs: SSOT 업데이트 요약 및 시스템 개선 문서 추가
- 상세한 변경 로그가 있는 SSOT_UPDATE_SUMMARY.md 추가
- catalogStore 최적화를 위한 ICON_MAPPING_IMPROVEMENT.md 추가
- 아이콘 매핑 검증을 위한 ICONKEY_MAPPING_VERIFICATION.md 추가
- 새 기능을 위한 메시지 및 상수 업데이트
- 실시간 이벤트 처리 및 라우팅 개선
- 매치 시스템을 위한 게임 및 채팅 스토어 업데이트
- UI 컴포넌트 개선 (ChatPanel, HubPanel, RoomListPanel 등)
- 의존성 및 vite 설정 업데이트

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@stomp/stompjs": "^7.3.0",
     "axios": "^1.7.9",
+    "monaco-editor": "^0.55.1",
     "pinia": "^3.0.4",
     "sockjs-client": "^1.6.1",
     "vue": "^3.5.24",
@@ -24,6 +25,7 @@
     "sass-embedded": "^1.97.3",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vue-tsc": "^3.1.4"
   }
 }
